cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj5_TupleStruct_1.plcfunc
FUNCTION proj5_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj5_TupleStruct_1 := tuple.field5;
END_FUNCTION
